SecretManagerClient is a provider based API for reading secrets